k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'node-server'
  labels:
    app: 'node-server'
spec:
  containers:
    - name: 'node-server'
      image: tequelequeteque/app_full_cycle:latest
      ports:
        - containerPort: 3000
      resources:
        requests:
          memory: '64Mi'
          cpu: '0.5Ki'
        limits:
          memory: '128Mi'
          cpu: '1Ki'
