k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-postgres-service
spec:
  clusterIP: None
  selector:
    app: db-postgres
  ports:
  - port: 5432
    targetPort: 5432
