k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'node-server-service'
spec:
  selector:
    app: 'node-server'
  ports:
    - port: 80
      targetPort: 3000
