k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: ingress-host
spec:
  rules:
  - host: fullcycle.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-server-service
            port: 
              number: 80
